syntax = "proto3";

package kvs;
option go_package = "github.com/CyKV-01/CyberKV/proto";

import "status.proto";
import "node.proto";

service KeyValue {
    rpc AssignSlot(AssignSlotRequest) returns (AssignSlotResponse) {}
    rpc Get(ReadRequest) returns (ReadResponse) {}
    rpc Set(WriteRequest) returns (WriteResponse) {}
    rpc Remove(WriteRequest) returns (WriteResponse) {}
}

message AssignSlotRequest {
    int32 slotID = 1;
}

message AssignSlotResponse {
}

message ReadOption {
    int32 consistency_level = 1;
}

message ReadRequest {
    string key = 1;
    uint64 ts = 2;
    ReadOption option = 3;
    
    repeated node.NodeInfo info = 5;
}

message ReadResponse {
    string value = 1;
    uint64 ts = 2;
    status.Status status = 3;
}

message WriteOption {
    bool sync = 1;
}

message WriteRequest {
    string key = 1;
    string value = 2;
    bool is_remove = 3;
    uint64 ts = 4;
    WriteOption option = 5;

    repeated node.NodeInfo info = 7;
}

message WriteResponse {
    status.Status status = 1;
}
